tests/rosetta/out/C/abelian-sandpile-model-identity.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:44Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_list_int neighborsList() {
  list_int tmp2 = list_int_create(2);
  tmp2.data[0] = 1;
  tmp2.data[1] = 3;
  list_int tmp3 = list_int_create(3);
  tmp3.data[0] = 0;
  tmp3.data[1] = 2;
  tmp3.data[2] = 4;
  list_int tmp4 = list_int_create(2);
  tmp4.data[0] = 1;
  tmp4.data[1] = 5;
  list_int tmp5 = list_int_create(3);
  tmp5.data[0] = 0;
  tmp5.data[1] = 4;
  tmp5.data[2] = 6;
  list_int tmp6 = list_int_create(4);
  tmp6.data[0] = 1;
  tmp6.data[1] = 3;
  tmp6.data[2] = 5;
  tmp6.data[3] = 7;
  list_int tmp7 = list_int_create(3);
  tmp7.data[0] = 2;
  tmp7.data[1] = 4;
  tmp7.data[2] = 8;
  list_int tmp8 = list_int_create(2);
  tmp8.data[0] = 3;
  tmp8.data[1] = 7;
  list_int tmp9 = list_int_create(3);
  tmp9.data[0] = 4;
  tmp9.data[1] = 6;
  tmp9.data[2] = 8;
  list_int tmp10 = list_int_create(2);
  tmp10.data[0] = 5;
  tmp10.data[1] = 7;
  list_int tmp1_data[] = {tmp2, tmp3, tmp4, tmp5, tmp6,
                          tmp7, tmp8, tmp9, tmp10};
  list_list_int tmp1 = {9, tmp1_data};
  return tmp1;
}

list_int plus(list_int a, list_int b) {
  list_int res = list_int_create(0);
  int i = 0;
  while (i < a.len) {
    res = 0;
    i = i + 1;
  }
  return res;
}

int isStable(list_int p) {
  for (int tmp11 = 0; tmp11 < p.len; tmp11++) {
    int v = p.data[tmp11];
    if (v > 3) {
      return 0;
    }
  }
  return 1;
}

int topple(list_int p) {
  list_list_int neighbors = neighborsList();
  int i = 0;
  while (i < p.len) {
    if (p.data[i] > 3) {
      p.data[i] = p.data[i] - 4;
      list_int nbs = neighbors.data[i];
      for (int tmp12 = 0; tmp12 < nbs.len; tmp12++) {
        int j = nbs.data[tmp12];
        p.data[j] = p.data[j] + 1;
      }
      return 0;
    }
    i = i + 1;
  }
  return 0;
}

char *pileString(list_int p) {
  char *s = "";
  int r = 0;
  while (r < 3) {
    int c = 0;
    while (c < 3) {
      char *tmp13 = _str(p.data[3 * r + c]);
      char *tmp14 = concat_string(s, tmp13);
      char *tmp15 = concat_string(tmp14, " ");
      s = tmp15;
      c = c + 1;
    }
    char *tmp16 = concat_string(s, "\n");
    s = tmp16;
    r = r + 1;
  }
  return s;
}

int _mochi_main() {
  printf("Avalanche of topplings:\\n\n");
  list_int s4 = list_int_create(9);
  s4.data[0] = 4;
  s4.data[1] = 3;
  s4.data[2] = 3;
  s4.data[3] = 3;
  s4.data[4] = 1;
  s4.data[5] = 2;
  s4.data[6] = 0;
  s4.data[7] = 2;
  s4.data[8] = 3;
  list_int tmp17 = list_int_create(9);
  tmp17.data[0] = 4;
  tmp17.data[1] = 3;
  tmp17.data[2] = 3;
  tmp17.data[3] = 3;
  tmp17.data[4] = 1;
  tmp17.data[5] = 2;
  tmp17.data[6] = 0;
  tmp17.data[7] = 2;
  tmp17.data[8] = 3;
  printf("%s\n", pileString(tmp17));
  list_int tmp18 = list_int_create(9);
  tmp18.data[0] = 4;
  tmp18.data[1] = 3;
  tmp18.data[2] = 3;
  tmp18.data[3] = 3;
  tmp18.data[4] = 1;
  tmp18.data[5] = 2;
  tmp18.data[6] = 0;
  tmp18.data[7] = 2;
  tmp18.data[8] = 3;
  while ((!isStable(tmp18))) {
    list_int tmp19 = list_int_create(9);
    tmp19.data[0] = 4;
    tmp19.data[1] = 3;
    tmp19.data[2] = 3;
    tmp19.data[3] = 3;
    tmp19.data[4] = 1;
    tmp19.data[5] = 2;
    tmp19.data[6] = 0;
    tmp19.data[7] = 2;
    tmp19.data[8] = 3;
    topple(tmp19);
    list_int tmp20 = list_int_create(9);
    tmp20.data[0] = 4;
    tmp20.data[1] = 3;
    tmp20.data[2] = 3;
    tmp20.data[3] = 3;
    tmp20.data[4] = 1;
    tmp20.data[5] = 2;
    tmp20.data[6] = 0;
    tmp20.data[7] = 2;
    tmp20.data[8] = 3;
    printf("%s\n", pileString(tmp20));
  }
  printf("Commutative additions:\\n\n");
  list_int s1 = list_int_create(9);
  s1.data[0] = 1;
  s1.data[1] = 2;
  s1.data[2] = 0;
  s1.data[3] = 2;
  s1.data[4] = 1;
  s1.data[5] = 1;
  s1.data[6] = 0;
  s1.data[7] = 1;
  s1.data[8] = 3;
  list_int s2 = list_int_create(9);
  s2.data[0] = 2;
  s2.data[1] = 1;
  s2.data[2] = 3;
  s2.data[3] = 1;
  s2.data[4] = 0;
  s2.data[5] = 1;
  s2.data[6] = 0;
  s2.data[7] = 1;
  s2.data[8] = 0;
  list_int tmp21 = list_int_create(9);
  tmp21.data[0] = 1;
  tmp21.data[1] = 2;
  tmp21.data[2] = 0;
  tmp21.data[3] = 2;
  tmp21.data[4] = 1;
  tmp21.data[5] = 1;
  tmp21.data[6] = 0;
  tmp21.data[7] = 1;
  tmp21.data[8] = 3;
  list_int tmp22 = list_int_create(9);
  tmp22.data[0] = 2;
  tmp22.data[1] = 1;
  tmp22.data[2] = 3;
  tmp22.data[3] = 1;
  tmp22.data[4] = 0;
  tmp22.data[5] = 1;
  tmp22.data[6] = 0;
  tmp22.data[7] = 1;
  tmp22.data[8] = 0;
  list_int s3_a = plus(tmp21, tmp22);
  while ((!isStable(s3_a))) {
    topple(s3_a);
  }
  list_int tmp23 = list_int_create(9);
  tmp23.data[0] = 2;
  tmp23.data[1] = 1;
  tmp23.data[2] = 3;
  tmp23.data[3] = 1;
  tmp23.data[4] = 0;
  tmp23.data[5] = 1;
  tmp23.data[6] = 0;
  tmp23.data[7] = 1;
  tmp23.data[8] = 0;
  list_int tmp24 = list_int_create(9);
  tmp24.data[0] = 1;
  tmp24.data[1] = 2;
  tmp24.data[2] = 0;
  tmp24.data[3] = 2;
  tmp24.data[4] = 1;
  tmp24.data[5] = 1;
  tmp24.data[6] = 0;
  tmp24.data[7] = 1;
  tmp24.data[8] = 3;
  list_int s3_b = plus(tmp23, tmp24);
  while ((!isStable(s3_b))) {
    topple(s3_b);
  }
  list_int tmp25 = list_int_create(9);
  tmp25.data[0] = 1;
  tmp25.data[1] = 2;
  tmp25.data[2] = 0;
  tmp25.data[3] = 2;
  tmp25.data[4] = 1;
  tmp25.data[5] = 1;
  tmp25.data[6] = 0;
  tmp25.data[7] = 1;
  tmp25.data[8] = 3;
  char *tmp26 = concat_string(pileString(tmp25), "\nplus\n\n");
  list_int tmp27 = list_int_create(9);
  tmp27.data[0] = 2;
  tmp27.data[1] = 1;
  tmp27.data[2] = 3;
  tmp27.data[3] = 1;
  tmp27.data[4] = 0;
  tmp27.data[5] = 1;
  tmp27.data[6] = 0;
  tmp27.data[7] = 1;
  tmp27.data[8] = 0;
  char *tmp28 = concat_string(tmp26, pileString(tmp27));
  char *tmp29 = concat_string(tmp28, "\nequals\n\n");
  char *tmp30 = concat_string(tmp29, pileString(s3_a));
  printf("%s\n", tmp30);
  list_int tmp31 = list_int_create(9);
  tmp31.data[0] = 2;
  tmp31.data[1] = 1;
  tmp31.data[2] = 3;
  tmp31.data[3] = 1;
  tmp31.data[4] = 0;
  tmp31.data[5] = 1;
  tmp31.data[6] = 0;
  tmp31.data[7] = 1;
  tmp31.data[8] = 0;
  char *tmp32 = concat_string("and\n\n", pileString(tmp31));
  char *tmp33 = concat_string(tmp32, "\nplus\n\n");
  list_int tmp34 = list_int_create(9);
  tmp34.data[0] = 1;
  tmp34.data[1] = 2;
  tmp34.data[2] = 0;
  tmp34.data[3] = 2;
  tmp34.data[4] = 1;
  tmp34.data[5] = 1;
  tmp34.data[6] = 0;
  tmp34.data[7] = 1;
  tmp34.data[8] = 3;
  char *tmp35 = concat_string(tmp33, pileString(tmp34));
  char *tmp36 = concat_string(tmp35, "\nalso equals\n\n");
  char *tmp37 = concat_string(tmp36, pileString(s3_b));
  printf("%s\n", tmp37);
  printf("Addition of identity sandpile:\\n\n");
  list_int s3 = list_int_create(9);
  s3.data[0] = 3;
  s3.data[1] = 3;
  s3.data[2] = 3;
  s3.data[3] = 3;
  s3.data[4] = 3;
  s3.data[5] = 3;
  s3.data[6] = 3;
  s3.data[7] = 3;
  s3.data[8] = 3;
  list_int s3_id = list_int_create(9);
  s3_id.data[0] = 2;
  s3_id.data[1] = 1;
  s3_id.data[2] = 2;
  s3_id.data[3] = 1;
  s3_id.data[4] = 0;
  s3_id.data[5] = 1;
  s3_id.data[6] = 2;
  s3_id.data[7] = 1;
  s3_id.data[8] = 2;
  list_int tmp38 = list_int_create(9);
  tmp38.data[0] = 3;
  tmp38.data[1] = 3;
  tmp38.data[2] = 3;
  tmp38.data[3] = 3;
  tmp38.data[4] = 3;
  tmp38.data[5] = 3;
  tmp38.data[6] = 3;
  tmp38.data[7] = 3;
  tmp38.data[8] = 3;
  list_int tmp39 = list_int_create(9);
  tmp39.data[0] = 2;
  tmp39.data[1] = 1;
  tmp39.data[2] = 2;
  tmp39.data[3] = 1;
  tmp39.data[4] = 0;
  tmp39.data[5] = 1;
  tmp39.data[6] = 2;
  tmp39.data[7] = 1;
  tmp39.data[8] = 2;
  list_int s4b = plus(tmp38, tmp39);
  while ((!isStable(s4b))) {
    topple(s4b);
  }
  list_int tmp40 = list_int_create(9);
  tmp40.data[0] = 3;
  tmp40.data[1] = 3;
  tmp40.data[2] = 3;
  tmp40.data[3] = 3;
  tmp40.data[4] = 3;
  tmp40.data[5] = 3;
  tmp40.data[6] = 3;
  tmp40.data[7] = 3;
  tmp40.data[8] = 3;
  char *tmp41 = concat_string(pileString(tmp40), "\nplus\n\n");
  list_int tmp42 = list_int_create(9);
  tmp42.data[0] = 2;
  tmp42.data[1] = 1;
  tmp42.data[2] = 2;
  tmp42.data[3] = 1;
  tmp42.data[4] = 0;
  tmp42.data[5] = 1;
  tmp42.data[6] = 2;
  tmp42.data[7] = 1;
  tmp42.data[8] = 2;
  char *tmp43 = concat_string(tmp41, pileString(tmp42));
  char *tmp44 = concat_string(tmp43, "\nequals\n\n");
  char *tmp45 = concat_string(tmp44, pileString(s4b));
  printf("%s\n", tmp45);
  printf("Addition of identities:\\n\n");
  list_int tmp46 = list_int_create(9);
  tmp46.data[0] = 2;
  tmp46.data[1] = 1;
  tmp46.data[2] = 2;
  tmp46.data[3] = 1;
  tmp46.data[4] = 0;
  tmp46.data[5] = 1;
  tmp46.data[6] = 2;
  tmp46.data[7] = 1;
  tmp46.data[8] = 2;
  list_int tmp47 = list_int_create(9);
  tmp47.data[0] = 2;
  tmp47.data[1] = 1;
  tmp47.data[2] = 2;
  tmp47.data[3] = 1;
  tmp47.data[4] = 0;
  tmp47.data[5] = 1;
  tmp47.data[6] = 2;
  tmp47.data[7] = 1;
  tmp47.data[8] = 2;
  list_int s5 = plus(tmp46, tmp47);
  while ((!isStable(s5))) {
    topple(s5);
  }
  list_int tmp48 = list_int_create(9);
  tmp48.data[0] = 2;
  tmp48.data[1] = 1;
  tmp48.data[2] = 2;
  tmp48.data[3] = 1;
  tmp48.data[4] = 0;
  tmp48.data[5] = 1;
  tmp48.data[6] = 2;
  tmp48.data[7] = 1;
  tmp48.data[8] = 2;
  char *tmp49 = concat_string(pileString(tmp48), "\nplus\n\n");
  list_int tmp50 = list_int_create(9);
  tmp50.data[0] = 2;
  tmp50.data[1] = 1;
  tmp50.data[2] = 2;
  tmp50.data[3] = 1;
  tmp50.data[4] = 0;
  tmp50.data[5] = 1;
  tmp50.data[6] = 2;
  tmp50.data[7] = 1;
  tmp50.data[8] = 2;
  char *tmp51 = concat_string(tmp49, pileString(tmp50));
  char *tmp52 = concat_string(tmp51, "\nequals\n\n");
  char *tmp53 = concat_string(tmp52, pileString(s5));
  printf("%s\n", tmp53);
  return 0;
}
int main() { return _mochi_main(); }
